noreferrer fix, word wrap update

--- a/src/features/PostFeed.css
+++ b/src/features/PostFeed.css
@@ -33,6 +33,7 @@ span {
     margin: 1rem;
     padding: 0.5rem;
     width: 90%;
+    word-wrap: break-word;
 }
 
 .feed video, img {
